assets/css/kamon.css
html {
  overflow-y: scroll;
  /* fix for scrollbars */
}

body {
  font: 17px/25px 'Open Sans', Helvetica, sans-serif;
  font-weight: 300;
  color: #444;
}

a {
  text-decoration: none;
  color: #607890;
  -webkit-transition: all 0.2s ease-out;
  -moz-transition: all 0.2s ease-out;
  -o-transition: all 0.2s ease-out;
  -ms-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
}

a:active,
a:visited { text-decoration: none; }

a:hover {
  text-decoration: none;
  color: #3e5365;
  -webkit-transition: all 0.3s ease-in;
  -moz-transition: all 0.3s ease-in;
  -o-transition: all 0.3s ease-in;
  -ms-transition: all 0.3s ease-in;
  transition: all 0.3s ease-in;
}

hr { border-top: 1px solid #e4ebef; }

img { max-width: 100%; }

p {
  font: 17px/25px 'Open Sans', Helvetica, sans-serif;
  color: #444;
  font-weight: 300;
}

small {
  font: 15px/21px 'Open Sans', Helvetica, sans-serif;
  font-weight: 300;
}

::selection {
  background: #74c043;
  color: white;
}

::-moz-selection {
  background: #74c043;
  color: white;
}

hr { margin: 10px 0; }

h1, h2, h3, h4 { margin-top: 10px; }

h1 {
  padding-bottom: 5px;
  font: 41px/49px 'Open Sans', Helvetica, sans-serif;
  color: #607890;
  font-weight: 700;
}

h2 {
  font: 33px/39px 'Open Sans', Helvetica, sans-serif;
  color: #607890;
  font-weight: 700;
}

h3 {
  font: 23px/27px 'Open Sans', Helvetica, sans-serif;
  color: #607890;
  font-weight: 300;
}

h4 {
  font: 19px/25px 'Open Sans', Helvetica, sans-serif;
  font-weight: 700;
}

.green { color: #74c043; }

.blue { color: #607890; }

.white { color: #fff; }

.bold {  font-weight: 700; }

.regular { font-weight: 400; }

.thin { font-weight: 300; }

.upper { text-transform: uppercase; }

.append-left { margin-left: 20px; }

.append-right { margin-right: 20px; }

.append-bottom { margin-bottom: 20px; }

.append-top { margin-top: 20px; }

.append-vertical {
  margin-top: 20px;
  margin-bottom: 20px;
}

.homepage-main {
  background: #74c043 url(../img/homepage-glow.png) no-repeat center center;
  min-height: 700px;
  height: 100vh;
  padding: 90px 0 30px;
  position: relative;
  color: #fff;
  display: table;
  width: 100%;
}

.homepage-main p {
  color: #fff;
}

.header {
  min-height: 90px;
  background-color: #74c043;
  padding: 20px 0;
  position: relative;
}

.header.homepage-header {
  position: absolute;
  background-color: transparent;
  z-index: 12;
  width: 100%;
  left: 0;
  top: 0;
}

.header-bar {
  background-color: #539728;
  padding: 7px 0 5px;
  min-height: 40px;
  border-top: 1px solid #75c044;
  border-bottom: 1px solid #569330;
}

.git-fork {
  width: 150px;
  height: 151px;
  position: absolute;
  top: 0;
  right: 0;
  display: inline-block;
  background: transparent url(../img/git-fork.png) no-repeat center center;
}

.logo { display: inline-block; }

/* navigation */
.navigation {
  text-align: right;
  margin: 10px 0 0;
  list-style: none;
  padding: 0;
}

.navigation>li,
.navigation>li>a {
  display: inline-block;
  text-transform: uppercase;
}
.navigation>li { margin-left: 6px; }

.btn {
  border: none;
  border-radius: 3px;
  padding: 5px 20px 7px;
  font-size: 13px;
  font-weight: 300;
}

.btn-lg {
  padding: 10px 25px 11px;
  font-size: 15px;
}

.btn-sm { padding: 3px 15px 4px; }

.btn-xs {
  padding: 2px 12px 3px;
  font-size: 12px;
}

.btn-pager {
  padding-left: 12px;
  padding-right: 12px;
}

.btn-default {
  background-color: #8c9eb0;
  color: #fff;
}

.btn-default:hover,
.btn-default:active,
.btn-default:focus {
  background-color: #778899;
  color: #fff;
  text-decoration: none;
  outline: none;
}

.btn-primary { background-color: #607890; }

.btn-primary:hover,
.btn-primary:active,
.btn-primary:focus {
  background-color: #445b73;
  text-decoration: none;
  outline: none;
}

.btn-primary.active { background-color: #7ac04f; }

.btn-success { background-color: #7ac04f; }

.btn-success:hover,
.btn-success:active,
.btn-success:focus {
  background-color: #5fa731;
  text-decoration: none;
  outline: none;
}

.btn-inverse {
  background-color: #fff;
  color: #539728;
}

.btn-inverse:hover,
.btn-inverse:active,
.btn-inverse:focus {
  color: #666;
  text-decoration: none;
  outline: none;
}

.btn-nav {
  font-size: 17px;
  padding: 3px 20px;
}

.head-box {
  display: table-cell;
  vertical-align: middle;
}

.homepage-title {
  font-size: 33px;
  line-height: 34px;
  padding-bottom: 20px;
  color: #fff;
  font-weight: 300;
  position: relative;
  margin: 30px 0 20px;
}

.homepage-circle {
  display: inline-block;
  padding: 40px 0 30px;
  width: 170px;
	height: 170px;
	border-radius: 100%;
	background-color: #5fa731;
	-webkit-box-shadow: 0 0 0 5px #fff;
	-moz-box-shadow: 0 0 0 5px #fff;
	box-shadow: 0 0 0 5px #fff;
	border: solid 7px #74c043;
  color: #fff;
  margin: 20px 0;
}

.homepage-circle i { font-size: 4.6em; }

.homepage-circle:hover,
.homepage-circle:active,
.homepage-circle:focus {
  color: #fff;
  background-color: #539728;
}

.btn-cta {
  background-color: #607890;
  padding: 25px 60px 26px;
  font-size: 29px;
  line-height: 29px;
  color: #fff;
  margin: 30px 10px 5px;
  font-weight: 300;
  text-decoration: none;
  border-bottom: 3px solid #3e5365;
  border-radius: 5px;
}

.btn-cta:hover,
.btn-cta:active,
.btn-cta:focus {
  color: #fff;
  text-decoration: none;
  background-color: #445b73;
}

.main { padding: 30px 0; }

.feat-title {
  position: relative;
  margin-bottom: 40px;
}

.feat-title:after {
  position: absolute;
  left: 50%;
  bottom: -20px;
  margin-left: -10px;
  color: #cccecf;
  text-shadow: 17px 0 #cccecf,-17px 0 #cccecf;
  content: '.';
  font-size: 1.5em;
}

.feat-box { margin: 20px 0; }

.date {
  color: #91969d;
  font-size: 13px;
  line-height: 15px;
}

/* docs-sidebar */
.dosc-sidebar,
.dosc-sidebar ul {
  list-style: none;
  padding-left: 0;
}

.docs-level-one {
  display: block;
  background-color: #607890;
  color: #fff;
  border-radius: 3px;
  padding: 8px 20px;
  font-weight: 300;
  margin: 10px 0 7px;
  font-size: 19px;
  line-height: 23px;
}

.docs-level-one:hover,
.docs-level-one:focus,
.docs-level-one:active {
  background-color: #445b73;
  color: #fff;
}

.docs-level-one.active { background-color: #7ac04f; }

.docs-level-two {
  display: block;
  color: #607890;
  padding: 5px 20px;
  font-weight: 400;
  font-size: 17px;
}

.docs-level-two:hover,
.docs-level-two:focus,
.docs-level-two:active { color: #3e5365; }

.docs-level-two.active { border-bottom: 1px solid #e4ebef; }

.docs-level-three {
  display: block;
  color: #607890;
  padding: 6px 20px 6px 30px;
  font-weight: 300;
  font-size: 15px;
  line-height: 18px;
  border-left: 3px solid transparent;
  margin: 2px 0;
}

.docs-level-three:hover,
.docs-level-three:focus,
.docs-level-three:active {
  background-color: #fafdfd;
  border-left: 3px solid #607890;
}

.docs-level-three.active {
  background-color: #fafdfd;
  border-left: 3px solid #7ac04f;
  color: #7ac04f;
}

/* tabs */
.nav-tabs { border-bottom: 1px solid #e4ebef; }

.nav-tabs>li>a {
  border-radius: 3px 3px 0 0;
  padding: 5px 20px;
  font-size: 15px;
  background-color: #e8eff0;
  border: none;
}

.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover {
  color: #fff;
  cursor: default;
  background-color: #7ac04f;
  border: none;
  border-bottom: 1px solid #7ac04f;
  outline: none;
}

.nav-tabs>li>a:focus,
.nav-tabs>li>a:hover {
  background-color: #8c9eb0;
  border-bottom: 1px solid #8c9eb0;
  color: #fff;
  outline: none;
}

.language-tab li {
  float: right;
  margin-left: 3px;
}

.tab-pane { position: relative; }

pre {
  color: #333;
  background-color: #f4f9fa;
  border: 1px solid #d6e0e2;
  border-radius: 3px;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] { background: #f4f9fa; }

.btn-git {
  background-color: #8c9eb0;
  border-radius: 0 3px 0 3px;
  position: absolute;
  top: 0;
  right: 0;
  color: #fff;
  padding: 3px 12px 2px;
}

.btn-git i { font-size: 1.9em; }

.btn-git:hover,
.btn-git:focus,
.btn-git:active {
  background-color: #7ac04f;
  color: #fff;
}

.tooltip {
  font-size: 13px;
  font-weight: 300;
  text-shadow: none;
}

.tooltip-inner { border-radius: 3px; }

/* blog */
.blog-sidebar { margin-bottom: 20px; }

.sidebar-title {
  display: block;
  background-color: #607890;
  color: #fff;
  border-radius: 3px;
  padding: 8px 20px;
  font-weight: 300;
  margin: 10px 0 20px;
  font-size: 19px;
  line-height: 23px;
}

.blog-tag {
  display: inline-block;
  font-size: 15px;
  line-height: 19px;
  border: 2px solid #607890;
  border-radius: 3px;
  padding: 3px 50px 4px 20px;
  position: relative;
  margin-bottom: 10px;
  margin-right: 5px;
}

.blog-tag:hover,
.blog-tag:focus,
.blog-tag:active {
  border: 2px solid #607890;
  background-color: #607890;
  color: #fff;
  text-decoration: none;
}

.blog-tag:after {
  content: "\f02b";
  font: normal normal normal 14px/1 FontAwesome;
  background-color: #607890;
  position: absolute;
  right: 0;
  top: 0;
  color: #fff;
  padding: 6px 10px;
  height: 100%;
}

.blog-tag.active {
  border: 2px solid #74c043;
  background-color: #74c043;
  color: #fff;
}

.blog-tag.active:after { background-color: #74c043; }

.sidebar-post {
  display: block;
  color: #607890;
  padding: 6px 20px;
  font-weight: 300;
  font-size: 15px;
  line-height: 18px;
  border-left: 3px solid transparent;
  margin: 2px 0;
}

.sidebar-post:hover,
.sidebar-post:focus,
.sidebar-post:active {
  background-color: #fafdfd;
  border-left: 3px solid #607890;
}

.sidebar-post.active {
  background-color: #fafdfd;
  border-left: 3px solid #7ac04f;
  color: #7ac04f;
}

/* footer */
.footer {
  padding: 30px 0 10px;
  background-color: #3e5365;
  color: #9db0c3;
}

.footer p { color: #9db0c3; }

.social-icon {
  display: inline-block;
  border-radius: 100%;
  background-color: #43586b;
  color: #fff;
  width: 50px;
  height: 50px;
  text-align: center;
  padding-top: 14px;
  margin: 10px 5px;
}

.social-icon i { font-size: 1.4em; }

.social-icon:hover,
.social-icon:active,
.social-icon:focus {
  background-color: #354858;
  color: #fff;
}

.btn-support {
  background-color: #354858;
  color: #fff;
  padding: 8px 70px 8px 30px;
  font-size: 15px;
  position: relative;
  margin: 15px 0 5px;
}

.btn-support i {
  background-color: #2c3d4c;
  color: #fff;
  position: absolute;
  padding: 11px 17px;
  font-size: 15px;
  right: 0;
  top: 0;
  border-radius: 0 3px 3px 0;
}

.btn-support:hover,
.btn-support:active,
.btn-support:focus {
  background-color: #2c3d4c;
  color: #fff;
  text-decoration: none;
}

.copyright {
  font-size: 15px;
  color: #9db0c3;
  text-align: center;
  font-weight: 300;
  margin-top: 5px;
  padding-top: 10px;
}

/* media queries */
@media (max-width: 1399px) {

  .git-fork { display: none; }

}

@media (max-width: 767px) {

  .navigation,
  .logo-wrap { text-align: center; }

  .logo { margin-bottom: 10px; }

}

@media (max-width: 480px) {

  .homepage-main {
    min-height: 100%;
    height: auto;
    padding: 60px 0 0;
    color: #fff;
    display: block;
    width: 100%;
  }

  .head-box {
    display: block;
    margin: 30px 0;
  }

  .btn-cta {
    padding: 17px 40px 18px;
    font-size: 21px;
    line-height: 21px;
  }

}

